--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "baseUrl": "./",
     "paths": {
       "/opt/services/*": ["src/nodejs/node_modules/services/*"],
+      "/services/*": ["src/nodejs/node_modules/services/*"],
       "/contracts/*": ["src/contracts/*"],
     }
   },
