--- a/package.json
+++ b/package.json
@@ -1,64 +1,78 @@
 {
-  "name": "twitter-content-generator",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@aws-amplify/ui-react": "^5.0.4",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.0",
-    "@mui/material": "^5.14.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/aws-lambda": "^8.10.119",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.38",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "aws-amplify": "^5.3.4",
-    "aws-sdk": "^2.1418.0",
-    "langchain": "^0.0.111",
-    "react": "^18.2.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-redux": "^8.1.1",
-    "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.1",
-    "serverless-esbuild": "^1.46.0",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "zod": "^3.21.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "serverless-dotenv-plugin": "^6.0.0"
-  }
+   "name": "twitter-content-generator",
+   "version": "0.1.0",
+   "private": true,
+   "dependencies": {
+      "@aws-amplify/ui-react": "^5.0.4",
+      "@emotion/react": "^11.11.1",
+      "@emotion/styled": "^11.11.0",
+      "@mui/icons-material": "^5.14.0",
+      "@mui/material": "^5.14.0",
+      "@reduxjs/toolkit": "^1.9.5",
+      "@testing-library/jest-dom": "^5.16.5",
+      "@testing-library/react": "^13.4.0",
+      "@testing-library/user-event": "^13.5.0",
+      "@types/aws-lambda": "^8.10.119",
+      "@types/jest": "^27.5.2",
+      "@types/react": "^18.2.15",
+      "@types/react-dom": "^18.2.7",
+      "aws-amplify": "^5.3.4",
+      "aws-sdk": "^2.1418.0",
+      "langchain": "^0.0.111",
+      "mysql": "^2.18.1",
+      "react": "^18.2.0",
+      "react-dnd": "^16.0.1",
+      "react-dnd-html5-backend": "^16.0.1",
+      "react-dom": "^18.2.0",
+      "react-dropzone": "^14.2.3",
+      "react-redux": "^8.1.1",
+      "react-router-dom": "^6.14.2",
+      "react-scripts": "5.0.1",
+      "redux": "^4.2.1",
+      "reflect-metadata": "^0.1.13",
+      "serverless-esbuild": "^1.46.0",
+      "typeorm": "0.3.17",
+      "typescript": "^4.9.5",
+      "web-vitals": "^2.1.4",
+      "zod": "^3.21.4",
+      "pg": "^8.4.0",
+      "react-native-sqlite-storage": "file:./shims/react-native-sqlite-storage"
+   },
+   "scripts": {
+      "start": "ts-node src/index.ts",
+      "serve": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   },
+   "browser": {
+      "fs": false,
+      "path": false,
+      "os": false
+   },
+   "devDependencies": {
+      "@types/node": "^16.11.10",
+      "serverless-dotenv-plugin": "^6.0.0",
+      "ts-node": "10.7.0",
+      "typescript": "4.5.2"
+   }
 }
